The server now starts up, with extensions working too. Things are still too slow though.