@@ -35,7 +35,9 @@ public class ExtensionManager {
 			if(f.getName().endsWith(".jar")){
 				try {
 					//First, load it with our custom class loader
-					dcl.addJar(f.toURI().toURL());
+					URL jar = new URL("jar:" + f.toURI().toURL() + "!/");
+					dcl.addJar(jar);
+					cd.addDiscoveryLocation(jar);
 					CHLog.GetLogger().Log(CHLog.Tags.EXTENSIONS, LogLevel.DEBUG, "Loaded " + f.getAbsolutePath(), Target.UNKNOWN);
 				} catch (MalformedURLException ex) {
 					Logger.getLogger(ExtensionManager.class.getName()).log(Level.SEVERE, null, ex);
